fixed alignment and added icons

--- a/bvtca/projects/html-css-projects/david-toepfer-bootstrap-mailbox/main.css
+++ b/bvtca/projects/html-css-projects/david-toepfer-bootstrap-mailbox/main.css
@@ -42,9 +42,37 @@ html,body {
 }
 
 #reply{
+    width:60%;
+    height:30%;
+
+}
+.time{
+    font-size: 12px;
+    padding-left: 5px;
+}
+.card-header{
     width:100%;
-    height:50%;
     display:flex;
-    justify-content:flex-start;
+    align-items:center;
+    justify-content:space-between;
+
+    
+}
+
+#address{
+    font-size:12px;
+}
+
+#subject{
+    font-size:24px;
+    font-weight:bold;
+    display:flex;
+    justify-content:space-between;
+    width:100%;
+}
+
+
+#body{
+    width: 70%
 }
 
